--- a/todo
+++ b/todo
@@ -22,14 +22,17 @@
 + Создать модель со связанными данными для чата
 + Тест join в sql lite - не работает моя схема в django
 + Настроить рабочую модель
-- Реализовать модель чата
++ Реализовать модель чата
     + описать в models
-    - функция создания чата
-    - функция загрузки существующего чата
+    + функция создания чата
+    + функция загрузки существующего чата
 
-- Тест
-- Деплой
++ Тест
++ Деплой
 
+- Подгрузка сообщений
+- Logout
+- Блокировка пользователя
 
 
 https://app.dbdesigner.net/designer/schema/375297
